--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -53,7 +53,7 @@ select:-webkit-autofill:focus {
   background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 174, 255, 0.04) 50%, rgba(255, 255, 255, 0) 51%, rgba(0, 174, 255, 0.03) 100%);
 }
 
-.auth-icon-success {
+.isAuthorized-icon-success {
   color: $success;
   font-size: 3rem;
 }
